@@ -1,0 +1,3 @@
+void test_libsym1_1(void) { }
+void test_libsym1_2(void) { }
+void test_libsym1_3(void) { }
