@@ -1,0 +1,3 @@
+void test_libsym2_1(void) { }
+void test_libsym2_2(void) { }
+void test_libsym2_3(void) { }
