@@ -1,0 +1,3 @@
+void test_libsym3_1(void) { }
+void test_libsym3_2(void) { }
+void test_libsym3_3(void) { }
