@@ -9,3 +9,4 @@ TEST test_args
 TEST test_common
 TEST test_tty_output
 TEST test_kill
+TEST test_libsym
