@@ -4,6 +4,7 @@
 	* move all tests to scripts
 	* added following options
 	  LIBS, LIBS_TO, LIBS_FROM, SYM, SYM_OMIT, SYM_BELOW, SYM_NOEXIT
+	* automated tests for LIBS*/SYM*
 
 2011-06-02 Jiri Olsa <olsajiri@gmail.com>
 	* adding large file support
